--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "scripts": {
-    "build": "dart-sass sass/style.scss:style.css",
-    "dev": "dart-sass --watch sass/style.scss:style.css"
+    "build": "sass sass/style.scss:style.css",
+    "dev": "sass --watch sass/style.scss:style.css"
   },
   "dependencies": {
-    "dart-sass": "^1.25.0"
+    "sass": "^1.62.1"
   }
 }
