--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "build": "sass sass/style.scss:style.css",
+    "build": "node build.js",
     "dev": "sass --watch sass/style.scss:style.css"
   },
   "dependencies": {
